--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>Dollar Photography</title>
+	<title>JQuery Form Validator Plugin</title>
 	<style type="text/css">
 		body {
 			font-family:arial;
